--- a/the_odin_project/HTML/index.html
+++ b/the_odin_project/HTML/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/Css/styles.css" />
+    <link rel="stylesheet" href="/the_odin_project/Css/styles.css" />
   </head>
   <body>
     <div class="navbar">
@@ -49,6 +49,47 @@
           </span>
         </ul>
       </nav>
+    </div>
+
+    <div class="google_text">
+      <div class="google_container">
+        <img
+          class="google-img"
+          src="/the_odin_project/Images/googlelogo_color_272x92dp.png"
+          width="272"
+          height="92"
+          alt=""
+        />
+      </div>
+    </div>
+
+    <div class="google_search">
+      <div class="google_search_container">
+        <div class="search_bar">
+          <div class="search_icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 0 24 24"
+              width="24px"
+              fill="#9aa0a6"
+            >
+              <path d="M0 0h24v24H0V0z" fill="none" />
+              <path
+                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="search_buttons">
+          <div class="google_search_button">
+            <p class="p_text_button">Google Search</p>
+          </div>
+          <div class="lucky_button">
+            <p class="p_text_button">I'm Feeling Lucky</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
