google homepage update on footer menu

--- a/the_odin_project/HTML/index.html
+++ b/the_odin_project/HTML/index.html
@@ -91,5 +91,18 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="footer-primary">
+        <p class="p_text_footer">Australia</p>
+      </div>
+      <div class="footer-secondary">
+        <ul class="footer_ul">
+          <li class="footer_li">Advertising</li>
+          <li class="footer_li">Business</li>
+          <li class="footer_li">How Search Works</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
